全面修复25项上线前问题
CRITICAL:
- clearRecentFiles()崩溃：改为直接操作内部列表
- refreshCurrentClassTab stale tabIndex：验证标签页未被关闭/移动

HIGH:
- exit()关闭所有CodeOnly窗口并调用Platform.exit()
- ResourceIndexEntry mutable byte[]防御性拷贝
- recentFiles()返回snapshot防止CME
- withWorkspaceIndex回调校验工作区仍活跃
- Export错误信息脱敏
- 工作区关闭时清理监听器

MEDIUM:
- BackgroundTasks/ClassTabOpener线程池添加shutdown hook
- logback.xml生产环境日志级别改为INFO，totalSizeCap降至256MB
- buildFullSourceCache添加2分钟总超时
- collectClassNames移至后台线程
- FxTools用线程池替代裸Thread
- 图标加载改为try-with-resources
- Workspace.setIndex/failIndex加synchronized
- I18nUtil添加isLocaleAvailable方法
- WorkspaceLoader仅在加载成功时记录最近文件

LOW:
- 解密错误消息脱敏
- 解编译器硬编码字符串国际化
- 所有search provider + OutlineParser统一\r\n行结尾处理
- VineflowerDecompiler .replace->endsWith检查
- ProcyonDecompiler targetBytes null守卫
- NativeWindowsTools调试代码改用logger.isDebugEnabled()
- StatusBar "Engine:"前缀国际化
- DiskCodeCache.cleanIfNeeded改为两遍流式处理

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>